test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics --release
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics
   Compiling library std (sway-lib-std)
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics)
warning
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:50:5
   |
48 | enum TwoVariants<T, const N: u64> {
49 |     Nothing: (),
50 |     Array: [T; N]
   |     ----- Enum variant Array is never constructed.
51 | }
52 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:17:15
   |
15 | }
16 | 
17 | impl<T, const N: u64> A for [T; N] {
   |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
18 |     fn my_len(self) -> u64 {
19 |         match LotsOfVariants::A(N) {
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:27:19
   |
25 | }
26 | 
27 | struct S<T, const N: u64> {
   |                   ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
28 | }
29 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:30:15
   |
28 | }
29 | 
30 | impl<T, const N: u64> S<T, N> {
   |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
31 |     pub fn len_xxx(self) -> u64 {
32 |         N
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:37:23
   |
35 | 
36 | // Enum with just one variant
37 | enum OneVariant<const N: u64> {
   |                       ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
38 |     A: [u64; N],
39 | }
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:41:12
   |
39 | }
40 | 
41 | impl<const N: u64> OneVariant<N> {
   |            ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
42 |     pub fn return_n(self) -> u64 {
43 |         N
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:48:27
   |
46 | 
47 | // Enum with more than one variant
48 | enum TwoVariants<T, const N: u64> {
   |                           ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
49 |     Nothing: (),
50 |     Array: [T; N]
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:53:15
   |
51 | }
52 | 
53 | impl<T, const N: u64> TwoVariants<T, N> {
   |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
54 |     pub fn len_xxx2(self) -> u64 {
55 |         N
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:60:19
   |
58 | 
59 | #[inline(never)]
60 | fn return_n<const NNN: u64>() -> u64 {
   |                   ^^^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
61 |     NNN
62 | }
   |
____

  Aborting due to 8 errors.
error: Failed to compile const_generics

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics --experimental const_generics --test-threads 1 --logs --revert-codes
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics
   Compiling library std (sway-lib-std)
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics)
    Finished debug [unoptimized + fuel] target(s) [5.048 KB] in ???
     Running 1 test, filtered 0 tests

tested -- const_generics

      test run_main ... ok (???, 8053 gas)
[src/main.sw:65:13] a = [1, 2]
[src/main.sw:74:13] s.len_xxx() = 3
[src/main.sw:80:13] e = OneVariant([1, 2, 3])
[src/main.sw:85:13] e = Nothing
[src/main.sw:90:13] return_n::<3>() = 3
[src/main.sw:91:13] return_n::<5>() = 3

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???
